examples/grpcurl-runner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grpcurl-runner
  labels:
    app: grpcurl-runner
spec:
  containers:
    - name: grpcurl-runner-container
      # https://github.com/fullstorydev/grpcurl
      # https://gallery.ecr.aws/a0j4q9e4/grpcurl-runner
      image: public.ecr.aws/a0j4q9e4/grpcurl-runner:latest
      command: ["/bin/sh", "-c", "while true; do sleep 5; done;"]
