examples/parking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking
  labels:
    app: parking
spec:
  replicas: 3
  selector:
    matchLabels:
      app: parking
  template:
    metadata:
      labels:
        app: parking
    spec:
      containers:
      - name: parking
        image: public.ecr.aws/x2j8p8w7/http-server:latest
