examples/nginx-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
spec:
  selector:
    matchLabels:
      app: nginx-test
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx-test
        image: public.ecr.aws/x2j8p8w7/lattice-test-server:latest
        ports:
        - containerPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test 
spec:
  selector:
    app: nginx-test
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
