examples/nginx-tls.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-tls
spec:
  selector:
    matchLabels:
      app: nginx-tls
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx-tls
    spec:
      containers:
      - name: nginx-tls
        image: public.ecr.aws/x2j8p8w7/lattice-test-server:latest 
        ports:
        - containerPort: 443

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls 
spec:
  selector:
    app: nginx-tls
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
