examples/tls-rate2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-rate2
  labels:
    app: tls-rate2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tls-rate2
  template:
    metadata:
      labels:
        app: tls-rate2
    spec:
      containers:
      - name: tls-rate2
        image: public.ecr.aws/x2j8p8w7/https-server:latest 
---
apiVersion: v1
kind: Service
metadata:
  name: tls-rate2
spec:
  selector:
    app: tls-rate2
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
