examples/grpc-test-suite.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: greeter-grpc-route
spec:
  hostnames:
    - tls-parking.my-test.com
  parentRefs:
    - name: my-hotel
      sectionName: tls-with-customer-cert
  rules:
    - backendRefs:
        - name: grpcbin-server
          kind: Service
          port: 19001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpcbin-server
  labels:
    app: grpcbin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grpcbin-server
  template:
    metadata:
      labels:
        app: grpcbin-server
    spec:
      containers:
        - name: grpcbin-server
          image: moul/grpcbin:latest
          volumeMounts:
            - name: cert-volume
              mountPath: /root/cert
      volumes:
        - name: cert-volume
          configMap:
            name: grpcbin-certs
---
apiVersion: v1
kind: Service
metadata:
  name: grpcbin-server
spec:
  selector:
    app: grpcbin-server
  ports:
    - name: over-http
      port: 19000
      targetPort: 9000
    - name: over-https
      port: 19001
      targetPort: 9001
