examples/inventory-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: GRPCRoute
metadata:
  name: inventory
spec:
  parentRefs:
  - name: my-hotel
    sectionName: https
  rules:
  - backendRefs:
    - name: inventory-ver2
      kind: Service
      port: 80
      weight: 10
