examples/nginx-route-tls-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: nginx-tls
spec:
  hostnames:
  - tls-nginx.my-test.com
  parentRefs:
  - name: my-hotel-tls
    sectionName: tls
  rules:
  - backendRefs:
    - name: nginx-tls
      kind: Service
      port: 443
