examples/nginx-test-TLSRoute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: nginx-test
spec:
  hostnames:
  - nginx-test.my-test.com
  parentRefs:
  - name: my-hotel-tls
    sectionName: tls
  rules:
  - backendRefs:
    - name: nginx-test
      kind: Service
      port: 443
